add_subdirectory("Factory")
add_subdirectory("Singleton")
add_subdirectory("Factory2")
add_subdirectory("ObjectPool")
add_subdirectory("Decorator")
add_subdirectory("Decorator2")
add_subdirectory("Facade")
add_subdirectory("Adapter")
add_subdirectory("Composite")
add_subdirectory("Proxy")
add_subdirectory("Flyweight")
